# AmeriaStereoMatching

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  OpenCLDeviceSelector.cpp  OpenCLDeviceSelector.h  OpenCLManager.cpp  OpenCLManager.h  OpenCLProgram.cpp  OpenCLProgram.h  OpenCVHelper.h  kernels.cl  main.cpp
src/cppkernels/: ComputeBestDisparityKernel.cpp  ComputeBestDisparityKernel.h  HorizontalAggregationKernel.cpp  HorizontalAggregationKernel.h  Kernel.cpp  Kernel.h  SADCostKernel.cpp  SADCostKernel.h  SADKernel.cpp  SADKernel.h
